--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+    "eslintConfig": {
+      "extends": [
+        "react-app",
+        "react-app/jest"
+      ],
+      "rules": {
+        "jsx-a11y/iframe-has-title": "off"
+      }
+    },
   "browserslist": {
     "production": [
       ">0.2%",
